[gd_scene load_steps=2 format=3 uid="uid://bi10vcuhn8f2"]

[ext_resource type="Script" path="res://ProjectInterface/StartInfo/Templates/TemplateEdit.gd" id="1_5vgjo"]

[node name="TemplateEdit" type="GraphNode"]
custom_minimum_size = Vector2(500, 0)
offset_right = 500.0
offset_bottom = 55.0
title = "Template (ID)"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color(1, 1, 1, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color(1, 1, 1, 1)
slot/7/left_icon = null
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color(1, 1, 1, 1)
slot/7/right_icon = null
slot/7/draw_stylebox = true
script = ExtResource("1_5vgjo")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
text = "Name"

[node name="NameEdit" type="LineEdit" parent="."]
layout_mode = 2

[node name="ParentLabel" type="Label" parent="."]
layout_mode = 2
text = "Parent"

[node name="ParentSelect" type="OptionButton" parent="."]
layout_mode = 2

[node name="ParamsLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Params"

[node name="ParamsList" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="FieldsLabel" type="Label" parent="."]
layout_mode = 2
text = "Fields"

[node name="FieldsList" type="VBoxContainer" parent="."]
layout_mode = 2
